# melo-webplayer

./: README  README.md  configure.ac  meson.build  meson_options.txt
debian/: changelog  control  copyright  rules
src/: Makefile.am  melo_browser_webplayer.c  melo_browser_webplayer.h  melo_browser_youtube.c  melo_browser_youtube.h  melo_player_webplayer.c  melo_player_webplayer.h  melo_webplayer.c  melo_webplayer.h  melo_webplayer_player.c  melo_webplayer_player.h  melo_webplayer_plugin.c  melo_youtube_browser.c  melo_youtube_browser.h  meson.build
