melolib_LTLIBRARIES = libmelo_webplayer.la

libmelo_webplayer_la_SOURCES = \
	melo_player_webplayer.c \
	melo_browser_webplayer.c \
	melo_webplayer.c \
	melo_webplayer_plugin.c

libmelo_webplayer_la_CFLAGS = \
	$(LIBMELO_CFLAGS)

libmelo_webplayer_la_LIBADD = \
	$(LIBMELO_LIBS)

noinst_HEADERS = \
	melo_player_webplayer.h \
	melo_browser_webplayer.h \
	melo_webplayer.h
